--- a/new template/carvilla-v1.0/index.html
+++ b/new template/carvilla-v1.0/index.html
@@ -109,7 +109,7 @@
 					<p>
 						Cashless Garages across India at an Affordable Premium. Get Your Quote price!!! 
 					</p>
-					<button class="welcome-btn" onclick="window.location.href='#'">contact us</button>
+					<button class="welcome-btn" onclick="window.location.href='#'">click</button>
 				</div>
 			</div>
 
