Update index.html version2

--- a/new template/carvilla-v1.0/index.html
+++ b/new template/carvilla-v1.0/index.html
@@ -173,10 +173,10 @@
 
 											  	<option value="default">condition</option><!-- /.option-->
 
-											  	<option value="something">something</option><!-- /.option-->
+											  	<option value="something">very Good</option><!-- /.option-->
 
-											  	<option value="something">something</option><!-- /.option-->
-											  	<option value="something">something</option><!-- /.option-->
+											  	<option value="something">fair</option><!-- /.option-->
+											  	<option value="something">bad</option><!-- /.option-->
 
 											</select><!-- /.select-->
 										</div><!-- /.model-select-icon -->
@@ -205,10 +205,10 @@
 
 											  	<option value="default">price</option><!-- /.option-->
 
-											  	<option value="$0.00">$0.00</option><!-- /.option-->
+											  	<option value="$0.00">$100.00</option><!-- /.option-->
 
-											  	<option value="$0.00">$0.00</option><!-- /.option-->
-											  	<option value="$0.00">$0.00</option><!-- /.option-->
+											  	<option value="$0.00">$50.00</option><!-- /.option-->
+											  	<option value="$0.00">$30.00</option><!-- /.option-->
 
 											</select><!-- /.select-->
 										</div><!-- /.model-select-icon -->
